# membrane-ai

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: cli.py
membrane/: __init__.py  audit.py  config.py  main.py
membrane/entity_alignment/: alignment.py
membrane/entity_tracker/: tracker.py
membrane/llm/: integrity.py  proxy.py
membrane/pii/: detector.py
membrane/rehydration/: rehydrator.py
membrane/tokenizer/: tokenizer.py
tests/: test_pipeline.py  test_sdk.py
