[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "membrane-ai"
version = "3.1.7"
description = "Enterprise AI privacy middleware — reversible PII anonymization."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Membrane Open Source", email = "oss@membrane.dev" }
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "openai>=1.14.0",
    "httpx>=0.27.0",
    "presidio-analyzer>=2.2.0",
    "spacy>=3.7.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0"
]
anthropic = [
    "anthropic>=0.21.0"
]

[tool.setuptools]
packages = ["membrane", "membrane.pii", "membrane.tokenizer", "membrane.llm", "membrane.entity_tracker", "membrane.entity_alignment", "membrane.rehydration"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
